--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-   <meta charset="utf-8">
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-   <script type="text/javascript" src=“src.js"></script>
-
-   <title>Unity WebGL Player | PsychicTowerRanking</title>
-   <script src="Build/UnityLoader.js"></script>
-   <script>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script src="src.js"></script>
+    <title>Unity WebGL Player | PsychicTowerRanking</title>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/game.json");
-   </script>
-</head>
-<body>
-   <div id="gameContainer" style="width: 750px; height: 1334px; margin: auto"></div>
-
-   <div>
-      <button onclick="saveCanvas('png');">pngで保存</button>
-      <button onclick="saveCanvas('jpeg');">jpegで保存</button>
-   </div>
-</body>
+    </script>
+  </head>
+  <body>
+    <div id="gameContainer" style="width: 750px; height: 1334px; margin: auto"></div>
+  </body>
 </html>
