--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script src="src.js"></script>
+    <script >
     <title>Unity WebGL Player | PsychicTowerRanking</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
@@ -13,4 +13,7 @@
   <body>
     <div id="gameContainer" style="width: 750px; height: 1334px; margin: auto"></div>
   </body>
+  <div>
+    <button onclick="saveCanvas('jpeg'); "jpegで保存</button>
+</div>
 </html>
