--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script src="src.js"/>
     <title>Unity WebGL Player | PsychicTowerRanking</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/game.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Release.json");
     </script>
   </head>
   <body>
     <div id="gameContainer" style="width: 750px; height: 1334px; margin: auto"></div>
   </body>
-  <div>
-    <button onclick="saveCanvas('jpeg'); "jpegで保存</button>
-</div>
 </html>
