--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   </head>
   <body>
     <div id="gameContainer" style="width: 750px; height: 1334px; margin: auto"></div>
+    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="サイキックタワー（バトル）！！をプレイして君もサイキック☆" data-url="https://m-masaki72.github.io/page/" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
