--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | PsychicTowerRanking</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Release.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "desktop/.json");
     </script>
   </head>
   <body>
