--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     </script>
   </head>
   <body>
+        <div>サイキックタワー</div>
+    <ul>操作方法
+      <li>ボタンでユッコを回転</li>
+      <li>タップでユッコを掴む</li>
+      <li>離すとユッコが落ちる</li>
+    </ul>
     <div id="gameContainer" style="width: 750px; height: 1334px; margin: auto"></div>
     <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="サイキックタワー（バトル）！！をプレイして君もサイキック☆" data-url="https://m-masaki72.github.io/page/" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
