--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li>タップでユッコを掴む</li>
       <li>離すとユッコが落ちる</li>
     </ul>
+    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="サイキックタワー（バトル）！！をプレイして君もサイキック☆" data-url="https://m-masaki72.github.io/page/" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <div id="gameContainer" style="width: 750px; height: 1334px; margin: auto"></div>
-    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="サイキックタワー（バトル）！！をプレイして君もサイキック☆" data-url="https://m-masaki72.github.io/page/" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
