--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | PsychicTowerRanking</title>
+    <title>サイキックタワーバトル</title>
     <script src="src.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
@@ -11,7 +11,7 @@
     </script>
   </head>
   <body>
-        <div>サイキックタワー</div>
+        <div>サイキックタワーバトル</div>
     <ul>操作方法
       <li>ボタンでユッコを回転</li>
       <li>タップでユッコを掴む</li>
