--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li>離すとユッコが落ちる</li>
     </ul>
     <div>BGMは@Number_One_P さまから提供していただきました</div>
-    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="サイキックタワー（バトル）！！をプレイして君もサイキック☆" data-url="https://m-masaki72.github.io/page/" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="サイキックタワーバトル！！をプレイして君もサイキック☆" data-url="https://m-masaki72.github.io/page/" data-hashtags="サイキックタワーバトル" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <div id="gameContainer" style="width: 750px; height: 1334px; margin: auto"></div>
     <ul>更新履歴
       <li>v1.0 公開(2018/03/13)</li>
