--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li>v1.1 素材の追加とオブジェクトのサイズ調整(2018/03/13)</li>
       <li>v1.11 連打するとサイキック空中浮遊するバグを修正(2018/03/13)</li>
       <li>v1.12 転がり摩擦値を大きくしました(2018/03/13)</li>
+      <li>v1.2 新規ユッコ追加，暫定版(2018/03/13)</li>
     </ul>
 
   </body>
